--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule ".vim"]
 	path = .vim
-	url = ./.vim
+	url = https://github.com/gvelchuru/.vim 
 [submodule ".oh-my-zsh"]
 	path = .oh-my-zsh
-	url = ./.oh-my-zsh
+	url = https://github.com/gvelchuru/oh-my-zsh
