--- a/.i3/config
+++ b/.i3/config
@@ -207,7 +207,7 @@ exec --no-startup-id redshift-gtk
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 exec --no-startup-id dunst
 exec --no-startup-id light-locker
-exec compton -b --config ~/.config/.compton.conf
+exec compton -b --config ~/.compton.conf
 exec_always feh --bg-scale ~/white_castle.jpg
 exec_always xautolock -detectsleep -time 5 -locker "light-locker-command -l" -notify 30 -notifier "notify-send -u critical -t 10000 -- 'LOCKING screen in 30 seconds'"
 exec --no-startup-id /usr/bin/boinc  --no_gui_rpc
