--- a/.compton.conf
+++ b/.compton.conf
@@ -1,10 +1,19 @@
+backend = "glx";
+glx-swap-method = 1;
+blur-background = true;
+blur-kern = "7x7box";
+
+
 # Shadow
-shadow = true;
-no-dnd-shadow = true;
-clear-shadow = true;
-shadow-radius = 5;
-shadow-offset-x = -7;
-shadow-offset-y = -7;
+shadow = true;			# Enabled client-side shadows on windows.
+no-dock-shadow = true;		# Avoid drawing shadows on dock/panel windows.
+no-dnd-shadow = true;		# Don't draw shadows on DND windows.
+clear-shadow = true;		# Zero the part of the shadow's mask behind the window (experimental).
+shadow-radius = 10;		# The blur radius for shadows. (default 12)
+shadow-offset-x = -15;		# The left offset for shadows. (default -15)
+shadow-offset-y = -15;		# The top offset for shadows. (default -15)
+shadow-opacity = 0.5;
+menu-opacity = 1;
 shadow-exclude = [
     "name = 'Notification'",
     "name = 'Polybar tray window'",
@@ -15,12 +24,37 @@ shadow-exclude = [
     "_GTK_FRAME_EXTENTS@:c"
 ];
 
+blur-background-exclude = [
+ "name = 'gnome-screenshot'", 
+ "class_g ?= 'gnome-screenshot'"
+];
+
+#opacity-rule = ["85:class_g = 'gnome-terminal'"];
+opacity-rule = [
+	"50:class_g = 'Bspwm' && class_i = 'presel_feedback'",
+	"75:class_g = 'URxvt'"
+];
+
 # Fading
-fading = true;
-fade-delta = 3;
+fading = true; # Fade windows during opacity changes.
+fade-delta = 4; # The time between steps in a fade in milliseconds. (default 10).
+fade-in-step = 0.03; # Opacity change between steps while fading in. (default 0.028).
+fade-out-step = 0.03; # Opacity change between steps while fading out. (default 0.03).
+no-fading-openclose = false; # Fade windows in/out when opening/closing
+
+detect-client-opacity = true; # This prevents opacity being ignored for some apps. For example without this enabled my xfce4-notifyd is 100% opacity no matter what.
+
+#Window type settings
+wintypes:
+{
+  tooltip = { fade = true; shadow = false; };
+  menu = { shadow = false; };
+  dropdown_menu = { shadow = false; };
+  popup_menu =  { shadow = false; };
+};
 
 # Other
-backend = "xrender";
+#backend = "xrender";
 mark-wmwin-focused = true;
 mark-ovredir-focused = true;
 detect-rounded-corners = true;
