--- a/.config/weather-bar/config
+++ b/.config/weather-bar/config
@@ -5,7 +5,7 @@
 ;
 ; If you don't yet have an API key, you can sign up for their **free** "Stratus" plan, which gives
 ; you 500 queries per day.   https://www.wunderground.com/api
-; weather-underground-api-key = "2a79b5f8caf7662ag"
+weather-underground-api-key = "2a79b5f8caf7662a"
 
 ; By default, noaa-weather-bar will attempt to geolocate you and determine the nearest NOAA weather station
 ; based on this location.  If the geolocation is failing or inaccurate, you can override it by providing a
