--- a/.compton.conf
+++ b/.compton.conf
@@ -13,7 +13,14 @@ shadow-radius = 10;		# The blur radius for shadows. (default 12)
 shadow-offset-x = -15;		# The left offset for shadows. (default -15)
 shadow-offset-y = -15;		# The top offset for shadows. (default -15)
 shadow-opacity = 0.5;
-menu-opacity = 1;
+menu-opacity = .8;
+# inactive-opacity = .8;
+# active-opacity =.8;
+# frame-opacity = .7;
+# inactive-opacity-override = false;
+# alpha-step = 0.06;
+# inactive-dim = 0.2;
+# inactive-dim-fixed = true;
 shadow-exclude = [
     "name = 'Notification'",
     "name = 'Polybar tray window'",
