--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule ".oh-my-zsh"]
 	path = .oh-my-zsh
 	url = https://github.com/gvelchuru/oh-my-zsh
+[submodule "tmux-gruvbox"]
+	path = tmux-gruvbox
+	url = https://github.com/egel/tmux-gruvbox.git
