--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -47,7 +47,7 @@ font-2 = IPAGothic:pixelsize=15;3
 
 modules-left = powermenu i3 
 modules-center = date 
-modules-right = volume wireless-network temperature
+modules-right = volume wireless-network wired-network temperature
 
 ;wm-restack = i3
 ;override-redirect = true
@@ -475,10 +475,10 @@ animation-packetloss-framerate = 1000
 
 [module/wired-network]
 type = internal/network
-interface = wlp1s0
+interface = enp4s0
 interval = 3.0
 
-label-connected =    %{T3}%local_ip%%{T-}
+label-connected =  %{T3}%local_ip%%{T-}
 label-disconnected-foreground = #66
 
 ;[module/volume]
@@ -517,21 +517,53 @@ mapped = true
 [module/powermenu]
 type = custom/menu
 
-format-padding = 1
+; Padding doesn't seem to be working
+label-open = " "
+label-open-foreground = ${colors.yellow}
+label-close =  cancel
+label-close-foreground = ${colors.yellow}
+label-separator = " | "
 
-label-open = ⏻
-label-close = ⏻
+menu-0-0 = reboot
+menu-0-0-exec = menu-open-1
+menu-0-1 = quit i3
+menu-0-1-exec = menu-open-2
+menu-0-2 = power off
+menu-0-2-exec = menu-open-3
+
+menu-1-0 = cancel
+menu-1-0-exec = menu-open-0
+menu-1-1 = reboot
+menu-1-1-exec = sudo reboot
+
+menu-2-0 = cancel
+menu-2-0-exec = menu-open-0
+menu-2-1      = shut off i3
+menu-2-1-exec = i3-msg exit
+
+menu-3-0 = power off
+menu-3-0-exec = sudo poweroff
+menu-3-1 = cancel
+menu-3-1-exec = menu-open-0
+
+;[module/powermenu]
+;type = custom/menu
+
+;format-padding = 1
+
+;label-open = ⏻
+;label-close = ⏻
 
 
-menu-0-0 = Terminate WM
-menu-0-0-foreground = ${colors.yellow}
-menu-0-0-exec = bspc quit -1
-menu-0-1 = Reboot
-menu-0-1-foreground = ${colors.yellow}
-menu-0-1-exec = menu_open-1
-menu-0-2 = Power off
-menu-0-2-foreground = ${colors.yellow}
-menu-0-2-exec = menu_open-2
+;menu-0-0 = Terminate WM
+;menu-0-0-foreground = ${colors.yellow}
+;menu-0-0-exec = bspc quit -1
+;menu-0-1 = Reboot
+;menu-0-1-foreground = ${colors.yellow}
+;menu-0-1-exec = menu_open-1
+;menu-0-2 = Power off
+;menu-0-2-foreground = ${colors.yellow}
+;menu-0-2-exec = menu_open-2
 
 ;menu-1-0 = Cancel
 ;menu-1-0-foreground = ${colors.yellow}
@@ -540,12 +572,12 @@ menu-0-2-exec = menu_open-2
 ;menu-1-1-foreground = ${colors.yellow}
 ;menu-1-1-exec = sudo reboot
 
-menu-2-0 = Power off
-menu-2-0-foreground = ${colors.yellow}
-menu-2-0-exec = sudo poweroff
-menu-2-1 = Cancel
-menu-2-1-foreground = ${colors.yellow}
-menu-2-1-exec = menu_open-0
+;menu-2-0 = Power off
+;menu-2-0-foreground = ${colors.yellow}
+;menu-2-0-exec = sudo poweroff
+;menu-2-1 = Cancel
+;menu-2-1-foreground = ${colors.yellow}
+;menu-2-1-exec = menu_open-0
 
 ;[module/clock]
 ;type = internal/date
