--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -530,6 +530,8 @@ menu-0-1 = quit i3
 menu-0-1-exec = menu-open-2
 menu-0-2 = power off
 menu-0-2-exec = menu-open-3
+menu-0-3 = hibernate
+menu-0-3-exec = menu-open-4
 
 menu-1-0 = cancel
 menu-1-0-exec = menu-open-0
@@ -545,6 +547,11 @@ menu-3-0 = power off
 menu-3-0-exec = sudo poweroff
 menu-3-1 = cancel
 menu-3-1-exec = menu-open-0
+
+menu-4-0 = hibernate
+menu-4-0-exec = systemctl suspend
+menu-4-1 = cancel
+menu-4-1-exec = menu-open-0
 
 ;[module/powermenu]
 ;type = custom/menu
