--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -537,7 +537,7 @@ menu-0-3-exec = menu-open-4
 menu-1-0 = cancel
 menu-1-0-exec = menu-open-0
 menu-1-1 = reboot
-menu-1-1-exec = sudo reboot
+menu-1-1-exec = reboot
 
 menu-2-0 = cancel
 menu-2-0-exec = menu-open-0
@@ -545,7 +545,7 @@ menu-2-1      = shut off i3
 menu-2-1-exec = i3-msg exit
 
 menu-3-0 = power off
-menu-3-0-exec = sudo poweroff
+menu-3-0-exec = poweroff
 menu-3-1 = cancel
 menu-3-1-exec = menu-open-0
 
