--- a/.i3/config
+++ b/.i3/config
@@ -34,7 +34,7 @@ bindsym $mod+Return exec kitty
 
 # kill focused window
 bindsym $mod+Shift+q kill
-bindsym $mod+i exec firefox-nightly
+bindsym $mod+i exec firefox
 
 # lock
 bindsym $mod+Escape exec "light-locker-command -l"
@@ -177,7 +177,7 @@ bindsym $mod+r mode "resize"
 #}
 
 # i3-gaps
-gaps inner 10
+gaps inner 0
 gaps outer 0
 #default_border normal 3
 #default_floating_border normal 3
@@ -213,7 +213,8 @@ exec --no-startup-id lxsession
 exec --no-startup-id dunst
 exec --no-startup-id light-locker
 exec compton -b -c --config ~/.compton.conf
-exec_always feh --bg-scale ~/white_castle.jpg
+#exec_always feh --bg-scale ~/white_castle.jpg
+exec_always --no-startup-id hsetroot -solid "#282828"
 exec --no-startup-id /usr/bin/boinc  
 exec --no-startup-id ~/backup.sh
 #--no_gui_rpc
