--- a/.i3/config
+++ b/.i3/config
@@ -206,6 +206,19 @@ bindsym XF86AudioPlay exec playerctl play-pause
 bindsym XF86AudioNext exec playerctl next
 bindsym XF86AudioPrev exec playerctl previous
 
+#Workspace
+workspace 1 output DP-1
+workspace 2 output DVI-D-0
+workspace 3 output DP-1
+workspace 4 output DVI-D-0
+workspace 5 output DP-1
+workspace 6 output DVI-D-0
+workspace 7 output DP-1
+workspace 8 output DVI-D-0
+workspace 9 output DP-1
+workspace 10 output DVI-D-0
+
+
 exec --no-startup-id onedrive
 exec --no-startup-id redshift-gtk
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
