--- a/.i3/config
+++ b/.i3/config
@@ -219,7 +219,7 @@ workspace 9 output DP-1
 workspace 10 output DVI-D-0
 
 
-exec --no-startup-id onedrive
+#exec --no-startup-id onedrive
 exec --no-startup-id redshift-gtk
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 exec --no-startup-id lxsession
