--- a/.compton.conf
+++ b/.compton.conf
@@ -8,7 +8,6 @@ blur-kern = "7x7box";
 shadow = true;			# Enabled client-side shadows on windows.
 no-dock-shadow = true;		# Avoid drawing shadows on dock/panel windows.
 no-dnd-shadow = true;		# Don't draw shadows on DND windows.
-clear-shadow = true;		# Zero the part of the shadow's mask behind the window (experimental).
 shadow-radius = 10;		# The blur radius for shadows. (default 12)
 shadow-offset-x = -15;		# The left offset for shadows. (default -15)
 shadow-offset-y = -15;		# The top offset for shadows. (default -15)
@@ -28,6 +27,7 @@ shadow-exclude = [
     "class_g = 'Conky'",
     "class_g ?= 'Notify-osd'",
     "class_g = 'Cairo-clock'",
+    "class_g = 'kitty'",
     "_GTK_FRAME_EXTENTS@:c"
 ];
 
@@ -65,7 +65,6 @@ wintypes:
 mark-wmwin-focused = true;
 mark-ovredir-focused = true;
 detect-rounded-corners = true;
-detect-client-opacity = true;
 vsync = "opengl-swc";
 paint-on-overlay = true;
 unredir-if-possible = true;
@@ -74,4 +73,3 @@ detect-client-leader = true;
 
 # GLX backend
 glx-no-stencil = true;
-glx-copy-from-front = true;
