--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "zplug"]
 	path = zplug
 	url = https://github.com/zplug/zplug
+[submodule ".config/nvim"]
+	path = .config/nvim
+	url = https://gitlab.com/gvelchuru/nvim.git
