--- a/.i3/config
+++ b/.i3/config
@@ -220,7 +220,7 @@ workspace 10 output DVI-D-0
 
 
 #exec --no-startup-id onedrive
-exec --no-startup-id redshift-gtk
+exec --no-startup-id redshift
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 exec --no-startup-id lxsession
 exec --no-startup-id dunst
@@ -229,4 +229,4 @@ exec_always feh --bg-scale ~/fox.jpg
 #exec_always --no-startup-id hsetroot -solid "#282828"
 exec --no-startup-id /usr/bin/boinc  
 #--no_gui_rpc
-exec xautolock -detectsleep -time 5 -locker "~/lock.sh" -notify 30 -notifier "notify-send -u critical -t 10000 -- 'LOCKING screen in 30 seconds'"
+exec xautolock -detectsleep -time 5 -locker "/home/gauthv/lock.sh" -notify 30 -notifier "notify-send -u critical -t 10000 -- 'LOCKING screen in 30 seconds'"
