--- a/.tmux.conf
+++ b/.tmux.conf
@@ -50,6 +50,10 @@ set-window-option -g window-status-activity-attr "none"
 set-window-option -g window-status-attr "none"
 set-window-option -g window-status-separator ""
 
+#escape time
+set-option -sg escape-time 10
+
+
 set-option -g status-left "#[fg=colour248, bg=colour241] #S #[fg=colour241, bg=colour237, nobold, noitalics, nounderscore]"
 set-option -g status-right "#[fg=colour239, bg=colour237, nobold, nounderscore, noitalics]#[fg=colour246,bg=colour239] %Y-%m-%d  %H:%M #[fg=colour248, bg=colour239, nobold, noitalics, nounderscore]#[fg=colour237, bg=colour248] #h "
 
@@ -60,4 +64,8 @@ bind | split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
 
 set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @continuum-restore 'on'
+set -g @resurrect-strategy-nvim 'session'
 run '~/.tmux/plugins/tpm/tpm'
