--- a/.i3/config
+++ b/.i3/config
@@ -207,16 +207,16 @@ bindsym XF86AudioNext exec playerctl next
 bindsym XF86AudioPrev exec playerctl previous
 
 #Workspace
-workspace 1 output DP-1
-workspace 2 output DVI-D-0
-workspace 3 output DP-1
-workspace 4 output DVI-D-0
-workspace 5 output DP-1
-workspace 6 output DVI-D-0
-workspace 7 output DP-1
-workspace 8 output DVI-D-0
-workspace 9 output DP-1
-workspace 10 output DVI-D-0
+workspace 1 output DP-2
+workspace 2 output HDMI-0
+workspace 3 output DP-2
+workspace 4 output HDMI-0
+workspace 5 output DP-2
+workspace 6 output HDMI-0
+workspace 7 output DP-2
+workspace 8 output HDMI-0
+workspace 9 output DP-2
+workspace 10 output HDMI-0
 
 
 #exec --no-startup-id onedrive
