--- a/.i3/config
+++ b/.i3/config
@@ -219,7 +219,6 @@ workspace 9 output DP-2
 workspace 10 output HDMI-0
 
 
-#exec --no-startup-id onedrive
 exec --no-startup-id redshift
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 exec --no-startup-id lxsession
@@ -228,8 +227,8 @@ exec compton -b -c --config ~/.compton.conf
 exec_always feh --bg-scale ~/fox.jpg
 #exec_always --no-startup-id hsetroot -solid "#282828"
 exec --no-startup-id /usr/bin/boinc  
-exec --no-startup-id google-drive-ocamlfuse /mnt/data1/caml_drive
+#exec --no-startup-id google-drive-ocamlfuse /mnt/data1/caml_drive
 #exec --no-startup-id xscreensaver -no-splash
-#exec --no-startup-id FAHControl
+exec --no-startup-id FAHControl
 #--no_gui_rpc
 exec xautolock -detectsleep -time 5 -locker "/home/gauthv/lock.sh" -notify 30 -notifier "notify-send -u critical -t 10000 -- 'LOCKING screen in 30 seconds'"
