--- a/.i3/config
+++ b/.i3/config
@@ -185,26 +185,15 @@ default_border none
 default_floating_border none
 
 
+# CONTROLS REPLACED WITH XBINDKEYS
 # Pulse Audio controls
 #bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% #increase sound volume
 #bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5% #decrease sound volume
-#bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle # mute sound
-bindsym XF86AudioRaiseVolume exec --no-startup-id /usr/bin/pulseaudio-ctl up
-bindsym XF86AudioLowerVolume exec --no-startup-id /usr/bin/pulseaudio-ctl down
-bindsym XF86AudioMute exec --no-startup-id /usr/bin/pulseaudio-ctl mute
 
-
-# Sreen brightness controls
-bindsym XF86MonBrightnessUp exec xbacklight -inc 10 # increase screen brightness
-bindsym XF86MonBrightnessDown exec xbacklight -dec 10 # decrease screen brightness
-
-# Touchpad controls
-bindsym XF86TouchpadToggle exec /some/path/toggletouchpad.sh # toggle touchpad
-
-# Media player controls
-bindsym XF86AudioPlay exec playerctl play-pause
-bindsym XF86AudioNext exec playerctl next
-bindsym XF86AudioPrev exec playerctl previous
+## Media player controls
+#bindsym XF86AudioPlay exec playerctl play-pause
+#bindsym XF86AudioNext exec playerctl next
+#bindsym XF86AudioPrev exec playerctl previous
 
 #Workspace
 workspace 1 output DP-2
@@ -219,6 +208,7 @@ workspace 9 output DP-2
 workspace 10 output HDMI-0
 
 
+exec --no-startup-id xbindkeys
 exec --no-startup-id redshift
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 exec --no-startup-id lxsession
@@ -230,5 +220,6 @@ exec --no-startup-id /usr/bin/boinc
 #exec --no-startup-id google-drive-ocamlfuse /mnt/data1/caml_drive
 #exec --no-startup-id xscreensaver -no-splash
 exec --no-startup-id FAHControl
+exec --no-startup-id /usr/bin/aa-notify -p -s 1 -w 60 -f /var/log/audit/audit.log
 #--no_gui_rpc
 exec xautolock -detectsleep -time 5 -locker "/home/gauthv/lock.sh" -notify 30 -notifier "notify-send -u critical -t 10000 -- 'LOCKING screen in 30 seconds'"
