--- a/.i3/config
+++ b/.i3/config
@@ -36,17 +36,9 @@ bindsym $mod+Return exec kitty
 bindsym $mod+Shift+q kill
 bindsym $mod+i exec firefox
 
-# lock
-bindsym $mod+Escape exec "xautolock -locknow && xset dpms force off" 
 
-# start dmenu (a program launcher)
-#bindsym $mod+d exec dmenu_run
 bindsym $mod+d exec --no-startup-id rofi -show run
-#bindsym $mod+l   exec "rofi -show window"
-# There also is the (new) i3-dmenu-desktop which only displays applications
-# shipping a .desktop file. It is a wrapper around dmenu, so you need that
-# installed.
-# bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
+bindsym $mod+l exec --no-startup-id rofi -show window
 
 # change focus
 bindsym $mod+j focus left
