--- a/.gdfuse/default/config
+++ b/.gdfuse/default/config
@@ -47,8 +47,8 @@ shared_with_me=true
 spreadsheet_format=ods
 spreadsheet_icon=
 sqlite3_busy_timeout=5000
-stream_large_files=false
+stream_large_files=true
 team_drive_id=
 umask=0o022
 verification_code=
-write_buffers=false
+write_buffers=true
