--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -15,10 +15,12 @@ aqua = #689d6a
 orange = #d65d0e
 
 [bar/top]
+tray-position = right
+
 scroll-up = i3wm-wsnext
 scroll-down = i3wm-wsprev
 
-monitor = ${env:MONITOR:} 
+monitor = ${env:MONITOR:}
 width = 100%
 height = 28
 
@@ -31,7 +33,7 @@ line-size = 16
 ;spacing =2
 
 padding-left = 0
-padding-right = 2 
+padding-right = 2
 
 module-margin-left = 1
 module-margin-right = 1
@@ -45,8 +47,8 @@ font-0 = FuraCode Nerd Font:pixelsize=14;3
 font-1 = FontAwesome:pixelsize=14;3
 font-2 = IPAGothic:pixelsize=15;3
 
-modules-left = powermenu i3 
-;modules-center = date 
+modules-left = powermenu i3
+;modules-center = date
 modules-right = volume wireless-network wired-network temperature date
 
 ;wm-restack = i3
@@ -82,10 +84,10 @@ ramp-4 = 
 ramp-4-foreground = ${colors.red}
 
 [bar/bottom]
-monitor = ${env:MONITOR:} 
+monitor = ${env:MONITOR:}
 bottom = true
 width = 100%
-height = 20 
+height = 20
 
 background = ${bar/top.background}
 foreground = ${bar/top.foreground}
@@ -110,7 +112,7 @@ font-0 = FuraCode Nerd Font:pixelsize=14;3
 ;modules-left = bspwm
 ;modules-left= weather
 modules-left  = filesystem
-modules-right = cpu memory 
+modules-right = cpu memory
 
 ;[module/backlight]
 ;type = internal/xbacklight
@@ -138,13 +140,13 @@ mount-0 = /
 format-mounted = <label-mounted> <bar-used>
 label-mounted = Disk
 bar-used-width = 30
-bar-used-foreground-0 = ${colors.green} 
-bar-used-foreground-1 = ${colors.green} 
-bar-used-foreground-2 = ${colors.orange} 
-bar-used-foreground-3 = ${colors.red} 
+bar-used-foreground-0 = ${colors.green}
+bar-used-foreground-1 = ${colors.green}
+bar-used-foreground-2 = ${colors.orange}
+bar-used-foreground-3 = ${colors.red}
 bar-used-indicator = |
 bar-used-indicator-font = 6
-bar-used-indicator-foreground = ${colors.white} 
+bar-used-indicator-foreground = ${colors.white}
 bar-used-fill = ─
 bar-used-fill-font = 6
 bar-used-empty = ─
@@ -374,22 +376,22 @@ ramp-coreload-0-font = 2
 ramp-coreload-0-foreground = ${colors.green}
 ramp-coreload-1 = ▂
 ramp-coreload-1-font = 2
-ramp-coreload-1-foreground = ${colors.green} 
+ramp-coreload-1-foreground = ${colors.green}
 ramp-coreload-2 = ▃
 ramp-coreload-2-font = 2
-ramp-coreload-2-foreground = ${colors.green} 
+ramp-coreload-2-foreground = ${colors.green}
 ramp-coreload-3 = ▄
 ramp-coreload-3-font = 2
-ramp-coreload-3-foreground = ${colors.green} 
+ramp-coreload-3-foreground = ${colors.green}
 ramp-coreload-4 = ▅
 ramp-coreload-4-font = 2
-ramp-coreload-4-foreground = ${colors.orange} 
+ramp-coreload-4-foreground = ${colors.orange}
 ramp-coreload-5 = ▆
 ramp-coreload-5-font = 2
-ramp-coreload-5-foreground = ${colors.orange} 
+ramp-coreload-5-foreground = ${colors.orange}
 ramp-coreload-6 = ▇
 ramp-coreload-6-font = 2
-ramp-coreload-6-foreground = ${colors.red} 
+ramp-coreload-6-foreground = ${colors.red}
 ramp-coreload-7 = █
 ramp-coreload-7-font = 2
 ramp-coreload-7-foreground = ${colors.red}
@@ -405,13 +407,13 @@ format = <label> <bar-used>
 label = RAM
 
 bar-used-width = 30
-bar-used-foreground-0 = ${colors.green} 
-bar-used-foreground-1 = ${colors.green} 
-bar-used-foreground-2 = ${colors.orange} 
-bar-used-foreground-3 = ${colors.red} 
+bar-used-foreground-0 = ${colors.green}
+bar-used-foreground-1 = ${colors.green}
+bar-used-foreground-2 = ${colors.orange}
+bar-used-foreground-3 = ${colors.red}
 bar-used-indicator = |
 bar-used-indicator-font = 6
-bar-used-indicator-foreground = ${colors.white} 
+bar-used-indicator-foreground = ${colors.white}
 bar-used-fill = ─
 bar-used-fill-font = 6
 bar-used-empty = ─
@@ -452,7 +454,7 @@ interface = wlp5s0
 interval = 6
 ping-interval = 6
 
-format-connected = <ramp-signal> 
+format-connected = <ramp-signal>
 format-packetloss = <animation-packetloss> <label-connected>
 label-connected = %essid%
 
@@ -479,7 +481,7 @@ type = internal/network
 interface = enp4s0
 interval = 3.0
 
-label-connected =  
+label-connected = 
 label-disconnected-foreground = ${colors.red}
 
 ;[module/volume]
@@ -501,7 +503,7 @@ label-disconnected-foreground = ${colors.red}
 [module/volume]
 type = internal/pulseaudio
 
-format-volume = <ramp-volume> 
+format-volume = <ramp-volume>
 label-volume = %percentage%
 label-muted =  00
 label-muted-foreground = ${colors.orange}
