--- a/.i3/config
+++ b/.i3/config
@@ -13,11 +13,11 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:monospace 8
+#font pango:monospace 8
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
-#font pango:DejaVu Sans Mono 8
+font pango:DejaVu Sans Mono 8
 
 # Before i3 v4.8, we used to recommend this one as the default:
 # font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
@@ -30,11 +30,11 @@ font pango:monospace 8
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec kitty 
+bindsym $mod+Return exec kitty
 
 # kill focused window
 bindsym $mod+Shift+q kill
-bindsym $mod+i exec firefox
+bindsym $mod+i exec firefox-nightly
 
 
 bindsym $mod+d exec --no-startup-id rofi -show run
@@ -65,7 +65,7 @@ bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
 # split in horizontal orientation
-bindsym $mod+h split v 
+bindsym $mod+h split v
 
 # split in vertical orientation
 bindsym $mod+v split h
@@ -91,42 +91,29 @@ bindsym $mod+g exec i3finder -a move
 # focus the child container
 #bindsym $mod+d focus child
 
-# Define names for default workspaces for which we configure key bindings later on.
-# We use variables to avoid repeating the names in multiple places.
-set $ws1 "1"
-set $ws2 "2"
-set $ws3 "3"
-set $ws4 "4"
-set $ws5 "5"
-set $ws6 "6"
-set $ws7 "7"
-set $ws8 "8"
-set $ws9 "9"
-set $ws10 "10"
-
 # switch to workspace
-bindsym $mod+1 workspace $ws1
-bindsym $mod+2 workspace $ws2
-bindsym $mod+3 workspace $ws3
-bindsym $mod+4 workspace $ws4
-bindsym $mod+5 workspace $ws5
-bindsym $mod+6 workspace $ws6
-bindsym $mod+7 workspace $ws7
-bindsym $mod+8 workspace $ws8
-bindsym $mod+9 workspace $ws9
-bindsym $mod+0 workspace $ws10
+bindsym $mod+1 workspace number 1
+bindsym $mod+2 workspace number 2
+bindsym $mod+3 workspace number 3
+bindsym $mod+4 workspace number 4
+bindsym $mod+5 workspace number 5
+bindsym $mod+6 workspace number 6
+bindsym $mod+7 workspace number 7
+bindsym $mod+8 workspace number 8
+bindsym $mod+9 workspace number 9
+bindsym $mod+0 workspace number 10
 
 # move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace $ws1
-bindsym $mod+Shift+2 move container to workspace $ws2
-bindsym $mod+Shift+3 move container to workspace $ws3
-bindsym $mod+Shift+4 move container to workspace $ws4
-bindsym $mod+Shift+5 move container to workspace $ws5
-bindsym $mod+Shift+6 move container to workspace $ws6
-bindsym $mod+Shift+7 move container to workspace $ws7
-bindsym $mod+Shift+8 move container to workspace $ws8
-bindsym $mod+Shift+9 move container to workspace $ws9
-bindsym $mod+Shift+0 move container to workspace $ws10
+bindsym $mod+Shift+1 move container to workspace number 1
+bindsym $mod+Shift+2 move container to workspace number 2
+bindsym $mod+Shift+3 move container to workspace number 3
+bindsym $mod+Shift+4 move container to workspace number 4
+bindsym $mod+Shift+5 move container to workspace number 5
+bindsym $mod+Shift+6 move container to workspace number 6
+bindsym $mod+Shift+7 move container to workspace number 7
+bindsym $mod+Shift+8 move container to workspace number 8
+bindsym $mod+Shift+9 move container to workspace number 9
+bindsym $mod+Shift+0 move container to workspace number 10
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
@@ -162,6 +149,28 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
+set $mygray   #282828
+set $bg1      #3c3836
+set $mycyan   #458588
+set $offwhite #ebdbb2
+set $myorange #d65d0e
+set $mygreen  #b8bb26
+set $myaqua #689d6a
+
+#bar
+#bar {
+    #position top
+    #status_command bumblebee-status -m spotify pasink sensors time -p time.format="%H:%M" -t gruvbox-powerline
+    #colors {
+        #background #282828
+			## Type             border  background font
+	#focused_workspace  $myaqua $myaqua $offwhite
+	#active_workspace   $bg1 $bg1 $offwhite
+	#inactive_workspace $bg1 $bg1 $offwhite
+	#urgent_workspace   $myorange $myorange $offwhite
+    #}
+#}
+
 # i3-gaps
 gaps inner 0
 gaps outer 0
@@ -189,8 +198,9 @@ exec --no-startup-id lxsession
 exec --no-startup-id dunst
 exec compton -b -c --config ~/.compton.conf
 exec_always feh --bg-scale ~/fox.jpg
-exec --no-startup-id /usr/bin/boinc  
-#exec --no-startup-id google-drive-ocamlfuse /mnt/data1/caml_drive
+#exec_always ~/.config/i3/i3scripts/autoname_workspaces.py &
+exec --no-startup-id /usr/bin/boinc
+#exec --no-startup-id /opt/OpenDrive/odrive
 exec --no-startup-id FAHControl
 exec --no-startup-id /usr/bin/aa-notify -p -s 1 -w 60 -f /var/log/audit/audit.log
 exec xautolock -detectsleep -time 5 -locker "/home/gauthv/lock.sh" -notify 30 -notifier "notify-send -u critical -t 10000 -- 'LOCKING screen in 30 seconds'"
