--- a/.tmux.conf
+++ b/.tmux.conf
@@ -38,6 +38,9 @@ set-window-option -g clock-mode-colour colour109 #blue
 # bell
 set-window-option -g window-status-bell-style fg=colour235,bg=colour167 #bg, red
 
+#shell
+set-option -g default-command /bin/zsh
+set -g default-terminal "screen-256color"
 
 ## Theme settings mixed with colors (unfortunately, but there is no cleaner way)
 set-option -g status-attr "none"
