--- a/.tmux.conf
+++ b/.tmux.conf
@@ -70,5 +70,5 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @continuum-restore 'on'
-set -g @resurrect-strategy-nvim 'session'
+#set -g @resurrect-strategy-nvim 'session'
 run '~/.tmux/plugins/tpm/tpm'
