--- a/.i3/config
+++ b/.i3/config
@@ -202,3 +202,4 @@ exec_always feh --bg-scale ~/fox.jpg
 exec --no-startup-id FAHControl
 exec --no-startup-id /usr/bin/aa-notify -p -s 1 -w 60 -f /var/log/audit/audit.log
 exec xautolock -detectsleep -time 5 -locker "/home/gauthv/lock.sh" -notify 30 -notifier "notify-send -u critical -t 10000 -- 'LOCKING screen in 30 seconds'"
+exec --no-startup-id xmodmap ~/.speedswapper
