updates to kiibo, removed some old stuff

--- a/.i3/config
+++ b/.i3/config
@@ -201,5 +201,5 @@ exec_always feh --bg-scale ~/fox.jpg
 #exec_always ~/.config/i3/i3scripts/autoname_workspaces.py &
 exec --no-startup-id FAHControl
 exec --no-startup-id /usr/bin/aa-notify -p -s 1 -w 60 -f /var/log/audit/audit.log
-exec xautolock -detectsleep -time 5 -locker "/home/gauthv/lock.sh" -notify 30 -notifier "notify-send -u critical -t 10000 -- 'LOCKING screen in 30 seconds'"
-exec --no-startup-id xmodmap ~/.speedswapper
+exec_always --no-startup-id killall xautolock || xautolock -detectsleep -time 5 -locker "/home/gauthv/lock.sh" -notify 30 -notifier "notify-send -u critical -t 10000 -- 'LOCKING screen in 30 seconds'"
+#exec --no-startup-id xmodmap ~/.speedswapper
