--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -533,8 +533,10 @@ menu-0-1 = quit i3
 menu-0-1-exec = menu-open-2
 menu-0-2 = power off
 menu-0-2-exec = menu-open-3
-menu-0-3 = hibernate
+menu-0-3 = suspend
 menu-0-3-exec = menu-open-4
+menu-0-4 = hibernate
+menu-0-4-exec = menu-open-5
 
 menu-1-0 = cancel
 menu-1-0-exec = menu-open-0
@@ -551,10 +553,15 @@ menu-3-0-exec = poweroff
 menu-3-1 = cancel
 menu-3-1-exec = menu-open-0
 
-menu-4-0 = hibernate
+menu-4-0 = suspend
 menu-4-0-exec = systemctl suspend
 menu-4-1 = cancel
 menu-4-1-exec = menu-open-0
+
+menu-5-0 = hibernate
+menu-5-0-exec = systemctl hibernate
+menu-5-1 = cancel
+menu-5-1-exec = menu-open-0
 
 ;[module/powermenu]
 ;type = custom/menu
