switch workspaces back

--- a/.i3/config
+++ b/.i3/config
@@ -180,16 +180,16 @@ default_border none
 default_floating_border none
 
 #Workspace
-workspace 1 output DP-2
-workspace 2 output HDMI-0
-workspace 3 output DP-2
-workspace 4 output HDMI-0
-workspace 5 output DP-2
-workspace 6 output HDMI-0
-workspace 7 output DP-2
-workspace 8 output HDMI-0
-workspace 9 output DP-2
-workspace 10 output HDMI-0
+workspace 2 output DP-2
+workspace 1 output HDMI-0
+workspace 4 output DP-2
+workspace 3 output HDMI-0
+workspace 6 output DP-2
+workspace 5 output HDMI-0
+workspace 8 output DP-2
+workspace 7 output HDMI-0
+workspace 10 output DP-2
+workspace 9 output HDMI-0
 
 
 exec --no-startup-id xbindkeys
@@ -202,4 +202,4 @@ exec_always feh --bg-scale ~/fox.jpg
 #exec --no-startup-id FAHControl
 exec --no-startup-id /usr/bin/aa-notify -p -s 1 -w 60 -f /var/log/audit/audit.log
 exec_always --no-startup-id killall xautolock || xautolock -detectsleep -time 5 -locker "/home/gauthv/lock.sh" -notify 30 -notifier "notify-send -u critical -t 10000 -- 'LOCKING screen in 30 seconds'"
-#exec --no-startup-id xmodmap ~/.speedswapper
+exec --no-startup-id xmodmap ~/.speedswapper
