--- a/.i3/config
+++ b/.i3/config
@@ -30,7 +30,7 @@ font pango:FuraCode Nerd Font 14
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec kitty
+bindsym $mod+Return exec hyper
 
 # kill focused window
 bindsym $mod+Shift+q kill
