--- a/.tmux.conf
+++ b/.tmux.conf
@@ -48,8 +48,9 @@ set-window-option -g window-status-format "#[fg=colour237,bg=colour239,noitalics
 
 
 #shell
-set-option -g default-command /bin/zsh
-set -g default-terminal "screen-256color"
+set -g terminal-overrides ',xterm-256color:Tc'
+set -g default-terminal "tmux-256color"
+set -as terminal-overrides ',xterm*:sitm=\E[3m'
 
 #escape time
 set-option -sg escape-time 10
