startup with tmux, config splitting between work

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -49,7 +49,7 @@ set-window-option -g window-status-format "#[fg=colour237,bg=colour239,noitalics
 
 #shell
 set -g terminal-overrides ',xterm-256color:Tc'
-set -g default-terminal "tmux-256color"
+set -g default-terminal "xterm-256color"
 set -as terminal-overrides ',xterm*:sitm=\E[3m'
 
 #escape time
