switch tmux to light theme

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,10 +8,12 @@ FG2="#504945"
 FG3="#665c54"
 BLUE="#458588"
 RED="#cc241d"
+AQUA="#689d6a"
 
 set-option -g status "on"
 
-# default statusbar colors set-option -g status-bg $BG1 #bg1
+# default statusbar colors 
+set-option -g status-bg $BG1 #bg1
 set-option -g status-fg $FG1 #fg1
 
 # default window title colors
@@ -19,7 +21,7 @@ set-window-option -g window-status-style bg=$BG1,fg=$BG3
 
 set-window-option -g window-status-activity-style bg=$BG1,fg=$FG3 
 
-set-window-option -g window-status-current-style bg=$BG2,fg=$BG1 
+set-window-option -g window-status-current-style bg=$AQUA,fg=$BG1 
 
 # pane border
 set-option -g pane-active-border-style fg=$FG2 #fg2
@@ -52,7 +54,7 @@ set-window-option -g window-status-separator ""
 set-option -g status-left "#[fg=$FG1, bg=$BG2] #S #[fg=$BG2, bg=$BG1, nobold, noitalics, nounderscore]"
 set-option -g status-right "#[fg=$BG3, bg=$BG1, nobold, nounderscore, noitalics]#[fg=$BG2,bg=$BG3] %Y-%m-%d  %H:%M #[fg=$BG2, bg=$BG3, nobold, noitalics, nounderscore]#[fg=$FG1, bg=$BG2] #h "
 
-set-window-option -g window-status-current-format "#[fg=$BG3, bg=$BG1, :nobold, noitalics, nounderscore]#[fg=$BG1, bg=$BG2] #I #[fg=$BG1, bg=$BG2, bold] #W #[fg=$BG2, bg=$BG1, nobold, noitalics, nounderscore]"
+set-window-option -g window-status-current-format "#[fg=$BG3, bg=$AQUA, :nobold, noitalics, nounderscore]#[fg=$BG1, bg=$AQUA] #I #[fg=$BG1, bg=$AQUA, bold] #W #[fg=$AQUA, bg=$BG1, nobold, noitalics, nounderscore]"
 set-window-option -g window-status-format "#[fg=$BG1,bg=$BG3,noitalics]#[fg=$BG2,bg=$BG3] #I #[fg=$BG2, bg=$BG3] #W #[fg=$BG3, bg=$BG1, noitalics]"
 
 #shell
