fixed all batcave issues

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -58,6 +58,8 @@ set-window-option -g window-status-current-format "#[fg=$BG3, bg=$AQUA, :nobold,
 set-window-option -g window-status-format "#[fg=$BG1,bg=$BG3,noitalics]#[fg=$BG2,bg=$BG3] #I #[fg=$BG2, bg=$BG3] #W #[fg=$BG3, bg=$BG1, noitalics]"
 
 #shell
+if-shell -b '[ `hostname` = "batcave" ]' \
+	"set-option -g default-command /bin/zsh"
 set -g terminal-overrides ',xterm-256color:Tc'
 set -g default-terminal "screen-256color"
 set -as terminal-overrides ',xterm*:sitm=\E[3m'
