--- a/.tmux.conf
+++ b/.tmux.conf
@@ -16,6 +16,8 @@ set-option -g status "on"
 set-option -g status-bg $BG1 #bg1
 set-option -g status-fg $FG1 #fg1
 
+set-window-option -g mode-keys vi
+
 # default window title colors
 set-window-option -g window-status-style bg=$BG1,fg=$BG3
 
