remove kiibohd in git

--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -1,2 +1,11 @@
 [nodejs]
 disabled = true
+
+[username]
+style = "fg:black"
+
+[hostname]
+style = "fg:black"
+
+[git_branch]
+style = "bold green"
