clean up zshrc exports

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -69,6 +69,9 @@ set -as terminal-overrides ',xterm*:sitm=\E[3m'
 #escape time
 set-option -sg escape-time 10
 
+#history
+set -g history-limit 5000
+
 bind | split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
 
