--- a/environment.yaml
+++ b/environment.yaml
@@ -12,7 +12,6 @@ dependencies:
   - chardet=3.0.4=py37_1003
   - conda=4.7.11=py37_0
   - conda-package-handling=1.3.11=py37_0
-  - cpplint=1.4.4=py_0
   - cryptography=2.7=py37h1ba5d50_0
   - greenlet=0.4.15=py37h7b6447c_0
   - idna=2.8=py37_0
@@ -50,5 +49,5 @@ dependencies:
   - yaml=0.1.7=had09818_2
   - zlib=1.2.11=h7b6447c_3
   - zstd=1.3.7=h0b5b093_0
-prefix: /home/velchug/miniconda3
+prefix: /home/gauthv/miniconda3
 
