--- a/.tmux.conf
+++ b/.tmux.conf
@@ -63,7 +63,7 @@ set-window-option -g window-status-format "#[fg=$BG1,bg=$BG3,noitalics]#[fg=$
 if-shell -b '[ `hostname` = "batcave" ]' \
 	"set-option -g default-command /bin/zsh"
 set -g terminal-overrides ',xterm-256color:Tc'
-set -g default-terminal "screen-256color"
+set -g default-terminal "screen-256color-bce"
 set -as terminal-overrides ',xterm*:sitm=\E[3m'
 
 #escape time
