back to conda, we good

--- a/.ssh/config
+++ b/.ssh/config
@@ -1,3 +1,39 @@
 Host aur.archlinux.org
     IdentityFile ~/.ssh/aur
     User gvelchuru
+
+Host bas-*
+    IdentityFile ~/.ssh/bastion.pub
+    ProxyCommand nc bastion-`echo %h | awk -F\- '{print $2}'`.ec2.amazon.com %p 2> /dev/null
+ 
+Host con-*
+    IdentityFile ~/.ssh/bastion.pub
+    ProxyCommand nc console-`echo %h | awk -F\- '{print $2}'`.ec2.amazon.com %p 2> /dev/null
+ 
+Host op-*
+    ProxyCommand ssh bas-`echo %h | awk -F\- '{print $2}'` nc ebs-opmanagement %p 2> /dev/null
+ 
+Host opm-*
+    ProxyCommand ssh bas-`echo %h | awk -F\- '{print $2}'` nc ebs-opmanager %p 2> /dev/null
+ 
+Host dbat
+    ProxyCommand ssh -o StrictHostKeyChecking=no security-bastions-prod-iad.amazon.com nc dbat.ec2.amazon.com %p 2> /dev/null
+ 
+Host boiler-*
+    ProxyCommand ssh bas-`echo %h | awk -F\- '{print $2}'` nc boiler %p 2> /dev/null
+ 
+Host boiler-tools-*
+    ProxyCommand ssh bas-`echo %h | awk -F\- '{print $2}'` nc boiler-tools %p 2> /dev/null
+ 
+################
+# Global SSH Options
+################
+Host *
+TCPKeepAlive yes
+HashKnownHosts yes
+ForwardAgent yes
+StrictHostKeyChecking no
+UserKnownHostsFile=/dev/null
+GSSAPIAuthentication no
+ServerAliveInterval 60
+ServerAliveCountMax 10
