--- a/.ssh/config
+++ b/.ssh/config
@@ -29,11 +29,12 @@ Host boiler-tools-*
 # Global SSH Options
 ################
 Host *
-TCPKeepAlive yes
-HashKnownHosts yes
-ForwardAgent yes
-StrictHostKeyChecking no
-UserKnownHostsFile=/dev/null
-GSSAPIAuthentication no
-ServerAliveInterval 60
-ServerAliveCountMax 10
+    TCPKeepAlive yes
+    HashKnownHosts yes
+    ForwardAgent yes
+    StrictHostKeyChecking no
+    UserKnownHostsFile=/dev/null
+    GSSAPIAuthentication no
+    ServerAliveInterval 60
+    ServerAliveCountMax 10
+    XAuthLocation /opt/X11/bin/xauth
