--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -529,8 +529,8 @@ label-separator = " | "
 
 menu-0-0 = reboot
 menu-0-0-exec = menu-open-1
-menu-0-1 = quit i3
-menu-0-1-exec = menu-open-2
+menu-0-1 = lock
+menu-0-1-exec = dm-tool lock 
 menu-0-2 = power off
 menu-0-2-exec = menu-open-3
 menu-0-3 = suspend
@@ -542,11 +542,6 @@ menu-1-0 = cancel
 menu-1-0-exec = menu-open-0
 menu-1-1 = reboot
 menu-1-1-exec = reboot
-
-menu-2-0 = cancel
-menu-2-0-exec = menu-open-0
-menu-2-1      = shut off i3
-menu-2-1-exec = i3-msg exit
 
 menu-3-0 = power off
 menu-3-0-exec = poweroff
