brew apollo packages

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -75,6 +75,7 @@ set -g history-limit 5000
 bind \ split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
+bind m movew -r \; display "Moved!"
 
 # smart pane switching with awareness of vim splits
 bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-h) || tmux select-pane -L"
