--- a/environment_batcave.yaml
+++ b/environment_batcave.yaml
@@ -19,12 +19,14 @@ dependencies:
   - pip=19.3.1=py37_0
   - pynvim=0.3.2=py37_0
   - python=3.7.5=h0371630_0
+  - pyyaml=5.1.2=py37h7b6447c_0
   - readline=7.0=h7b6447c_5
   - setuptools=41.6.0=py37_0
   - sqlite=3.30.1=h7b6447c_0
   - tk=8.6.8=hbc83047_0
   - wheel=0.33.6=py37_0
   - xz=5.2.4=h14c3975_4
+  - yaml=0.1.7=had09818_2
   - zlib=1.2.11=h7b6447c_3
 prefix: /home/gauthv/miniconda3/envs/dev
 
