--- a/.tmux.conf
+++ b/.tmux.conf
@@ -89,11 +89,10 @@ bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
-bind Escape copy-mode
-bind -T vi-copy 'v' begin-selection
-bind -T vi-copy 'y' copy-selection
-unbind p
-bind p paste-buffer
+bind P paste-buffer
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-selection
+bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
 
 set -g @plugin 'christoomey/vim-tmux-navigator'
 run '~/.tmux/plugins/tpm/tpm'
