--- a/financial/theta_gang/package.json
+++ b/financial/theta_gang/package.json
@@ -5,12 +5,16 @@
   "author": "Gautham Velchuru <gvelchuru@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "algotrader": "^2.5.1",
-    "axios": "^0.19.0",
+    "axios": "^0.18.1",
+    "axios-retry": "^3.1.2",
     "csv": "^5.3.0",
     "querystring": "^0.2.0"
   },
   "scripts": {
     "run-project": "tsc index.ts && node index.js"
+  },
+  "devDependencies": {
+    "@types/node": "^12.12.14",
+    "typescript": "^3.7.2"
   }
 }
