--- a/environment_apollo.yaml
+++ b/environment_apollo.yaml
@@ -58,6 +58,10 @@ dependencies:
   - yaml=0.1.7=had09818_2
   - zlib=1.2.11=h7b6447c_3
   - pip:
+    - argcomplete==1.10.3
     - cbor==1.0.0
+    - distro==1.4.0
+    - pipx==0.14.0.0
+    - userpath==1.3.0
 prefix: /home/velchug/miniconda3/envs/dev
 
