--- a/environment_ec2.yaml
+++ b/environment_ec2.yaml
@@ -5,15 +5,23 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1=main
   - appdirs=1.4.3=py37h28b3542_0
+  - asn1crypto=1.2.0=py37_0
   - astroid=2.3.3=py37_0
   - attrs=19.3.0=py_0
   - black=19.3b0=py_0
-  - ca-certificates=2019.10.16=0
-  - certifi=2019.9.11=py37_0
+  - boto=2.49.0=py37_0
+  - boto3=1.10.19=py_0
+  - botocore=1.13.19=py_0
+  - ca-certificates=2019.11.27=0
+  - certifi=2019.11.28=py37_0
+  - cffi=1.13.2=py37h2e261b9_0
   - click=7.0=py37_0
   - cpplint=1.4.4=py_0
+  - cryptography=2.8=py37h1ba5d50_0
+  - docutils=0.15.2=py37_0
   - greenlet=0.4.15=py37h7b6447c_0
   - isort=4.3.21=py37_0
+  - jmespath=0.9.4=py_0
   - lazy-object-proxy=1.4.3=py37h7b6447c_0
   - libedit=3.1.20181209=hc058e9b_0
   - libffi=3.2.1=hd88cf55_4
@@ -25,12 +33,16 @@ dependencies:
   - neovim=0.3.1=py37_0
   - openssl=1.1.1d=h7b6447c_3
   - pip=19.3.1=py37_0
+  - pycparser=2.19=py37_0
   - pylint=2.4.4=py37_0
   - pynvim=0.3.2=py37_0
+  - pyopenssl=19.1.0=py37_0
+  - pysocks=1.7.1=py37_0
   - python=3.7.5=h0371630_0
   - pyyaml=5.1.2=py37h7b6447c_0
   - readline=7.0=h7b6447c_5
-  - setuptools=42.0.1=py37_0
+  - s3transfer=0.2.1=py37_0
+  - setuptools=42.0.2=py37_0
   - six=1.13.0=py37_0
   - sqlite=3.30.1=h7b6447c_0
   - tk=8.6.8=hbc83047_0
@@ -57,5 +69,5 @@ dependencies:
     - userpath==1.3.0
     - websocket-client==0.56.0
     - websockets==8.1
-prefix: /home/ec2-user/miniconda3/envs/dev
+prefix: /home/ubuntu/miniconda3/envs/dev
 
