fix tmux conf on ec2

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -63,8 +63,7 @@ set-window-option -g window-status-format "#[fg=$BG1,bg=$BG3,noitalics]#[fg=$
 if-shell -b '[ `hostname` = "batcave" ]' \
 	"set-option -g default-command /bin/zsh"
 set -g terminal-overrides ',xterm-256color:Tc'
-if-shell -b '[[ $IS_EC2 -gt 0 ]]' \
-	"set -g default-terminal \"screen-256color-bce\""
+set-option -g default-terminal screen-256color-bce-s
 set -as terminal-overrides ',xterm*:sitm=\E[3m'
 
 #escape time
@@ -73,7 +72,7 @@ set-option -sg escape-time 10
 #history
 set -g history-limit 10000
 
-bind \ split-window -h -c "#{pane_current_path}"
+bind \\ split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 bind m movew -r \; display "Moved!"
@@ -83,7 +82,7 @@ bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iq v
 bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-j) || tmux select-pane -D"
 bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-k) || tmux select-pane -U"
 bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
-bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys 'C-\\') || tmux select-pane -l"
+bind -n C-\\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys 'C-\\') || tmux select-pane -l"
 
 bind -r H resize-pane -L 5
 bind -r J resize-pane -D 5
